--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,106 +1,62 @@
-:root {
-  --dark: rgb(216, 209, 209);
-  --light: #fff;
-  --navlink-color: #111110;
-  --footer-color: rgb(5, 5, 5);
-}
-
-.container {
-  display: flex;
-  justify-content: space-around;
-  border-style: solid;
-  border-width: 1px;
-  padding: 10px;
-  margin: 20px;
-  flex: 0 0 300px;
-  box-shadow: 0px 0px 10px black;
-  border-radius: 70px;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1%;
-  background-color: var(--dark);
-  color: var(--foo);
-}
-
-h1 {
-  font-size: 200%;
-}
-
-h2 {
-  display: flex;
-  font-size: 250%;
+* {
+  box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-  line-height: 1.3;
+  background-image: url(../images/background\ -image.jpg);
+  background-attachment: fixed;
+  font-family: Arial;
+  margin: 0;
 }
 
-a[href*=".css"]::after {
-  display: inline-block;
-  margin-left: 3px;
+header {
+  padding: 40px;
+  text-align: center;
+  /*background: #1;*/
+  color: #fff;
 }
 
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  min-width: 300px;
+nav {
+  display: flex-start;
+  background-color: whitesmoke;
 }
 
 nav a {
-  background-color: unset;
-  color: var(--navlink-color);
-  font-weight: bold;
+  color: #13293d;
+  padding: 14px 20px;
   text-decoration: none;
-}
-
-nav a:hover {
-  color: var(--light);
+  text-align: center;
 }
 
 main {
   display: flex;
-  flex: 1 1 0;
-  max-width: 96%;
-  margin: 2% auto;
-}
-
-article {
-  border-bottom: 1px solid var(--dark);
-}
-
-article p {
-  display: flex;
-  margin: 2% 0;
-  font-size: 110%;
-}
-
-article ul {
-  margin-left: 5%;
-  font-size: 110%;
-  list-style: circle;
+  flex-wrap: wrap;
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  padding: 2%;
-  background-color: var(--dark);
-  color: var(--light);
+  align-items: baseline;
+  padding: 20px;
+  text-align: center;
+  background: #13293d;
+  color: #fff;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  background-color: transparent;
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+.large-box {
+  position: relative;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
-  header {
+  main,
+  nav {
     flex-direction: column;
-  }
-
-  main {
-    max-width: 1200px;
   }
 }
