pushing updates in the html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,10 @@ footer {
   display: block;
 }
 
+header img {
+  height: 200px;
+  width: 200px;
+}
 .large-box {
   display: block;
   position: relative;
