--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 body {
   background-image: url(../images/background\ -image.jpg);
   background-attachment: fixed;
+  background-size: cover;
   font-family: Arial;
   margin: 0;
 }
@@ -42,16 +43,16 @@ footer {
 }
 
 .container {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 header img {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
 }
 .large-box {
   display: block;
-  position: relative;
   text-align: center;
   background-image: url(../images/jeremy-bishop-itYOt_CSv1s-unsplash.jpg);
   padding: 45px;
