--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ nav a {
   padding: 14px 20px;
   text-decoration: none;
   text-align: center;
+  font-size : 20px;
 }
 
 main {
@@ -40,6 +41,7 @@ footer {
   text-align: center;
   background: #13293d;
   color: #fff;
+  border: 8px solid black;
 }
 
 .container {
@@ -54,7 +56,7 @@ header img {
 .large-box {
   display: block;
   text-align: center;
-  background-image: url(../images/jeremy-bishop-itYOt_CSv1s-unsplash.jpg);
+  background: #13293d;
   padding: 45px;
   height: auto;
   border: 8px solid black;
@@ -65,6 +67,18 @@ header img {
   width: 100%;
   max-height: auto;
 }
+
+span {
+background-color:whitesmoke;
+font-size: large;
+font-display: bold;
+font-size: 20px;
+}
+ h3 {
+   font-size: 40px;
+   background-color: black;
+   
+ }
 
 @media screen and (max-width: 768px) {
   main,
